# cookiecutter

./: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
python/: cookiecutter.json  cookiecutter_defaults.json
python/tests/: test_python.py
python/{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  .python-version  Dockerfile  README.md  noxfile.py  pyproject.toml  tasks.py
python/{{cookiecutter.project_slug}}/.github/workflows/: build_and_push.yml  test_code_nox_style.yml
python/{{cookiecutter.project_slug}}/tests/unit/: conftest.py  test_{{cookiecutter.project_python_name}}.py
python/{{cookiecutter.project_slug}}/{{cookiecutter.project_python_name}}/: {{cookiecutter.project_python_name}}.py
tests/: __init__.py  test_cfg_files.py
